# rurl

./: .env.sample  .gitignore  Cargo.toml  flake.nix  process-compose.yml
migrations/: 20250329141828_create_urls_table.sql
src/: main.rs
