[package]
name = "rurl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7" # Prüfe die aktuellste Version
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
url = "2"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate" ] }
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 